# GitHelloworld

./: README.md  helloworld.c  helloworld.py
Ada/src/: helloworld.adb
C/: CMakeLists.txt
C/src/: helloworld.c
Cpp/: CMakeLists.txt
Cpp/src/: helloworld.cpp
java/: CMakeLists.txt  MANIFEST.MF
java/src/garage/: Garage.java  MainGarage.java
java/src/veicoli/: Automobile.java  Furgone.java  Motoclicletta.java  VeicoloAMotore.java
python/src/: helloworld.py
